[package]
name = "loopfisch"
version = "0.1.0"
authors = ["Florian Jung <flo@windfisch.org>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { git = "https://github.com/Windfisch/rust-jack" }
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc" }
ringbuf = "0.2.1"
intrusive-collections = "0.9.0"
crossterm = "0.17"
smallvec = "1.4"
rocket = {git="https://github.com/SergioBenitez/Rocket", branch="master"}
rocket_contrib = {git="https://github.com/SergioBenitez/Rocket", branch="master"}
async-std = {version="1.6.3", features=["unstable"]}
serde = {version = "1", features=["derive"]}
serde_json = "1"
tokio = "0.2"

[patch.crates-io]
rocket = {git="https://github.com/SergioBenitez/Rocket", branch="master"}
