[package]
name = "loopfisch"
version = "0.1.0"
authors = ["Florian Jung <flo@windfisch.org>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { git = "https://github.com/Windfisch/rust-jack" }
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc" }
ringbuf = "0.2.1"
intrusive-collections = "0.9.0"
smallvec = "1.4"
rocket = {git="https://github.com/SergioBenitez/Rocket", branch="master"}
rocket_contrib = {git="https://github.com/SergioBenitez/Rocket", branch="master"}
async-std = {version="1.6.3", features=["unstable"]}
serde = {version = "1", features=["derive"]}
serde_json = "1"
tokio = {version="0.2", features=["net"]}
tokio-fd = "0.1.0"
eventfd = {git="https://github.com/jkryl/eventfd-rust", rev="4e7c14af4b32bd764f46788c5098c951e47b38f9"}
gen-iter = {git="https://github.com/Windfisch/gen-iter"}
num-traits = "0.2.14"
stable_deref_trait = "1.0.0"

[patch.crates-io]
rocket = {git="https://github.com/SergioBenitez/Rocket", branch="master"}
